WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196670
[iOS] Moving backwards by word granularity does not work if the previous line was inside another block element
https://bugs.webkit.org/show_bug.cgi?id=196670
Summary
[iOS] Moving backwards by word granularity does not work if the previous line...
Ryosuke Niwa
Reported
2019-04-05 22:52:56 PDT
With the following markup, iOS WebKit fails to move backwards from the beginning of the second line by word granularity: <div>first</div> <div>second</div> <
rdar://problem/46880663
>
Attachments
Fixes the bug
(14.14 KB, patch)
2019-04-05 23:07 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Fixes the bug
(13.41 KB, patch)
2019-04-05 23:08 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-highsierra
(2.51 MB, application/zip)
2019-04-06 00:13 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews104 for mac-highsierra-wk2
(2.71 MB, application/zip)
2019-04-06 00:27 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews116 for mac-highsierra
(2.36 MB, application/zip)
2019-04-06 00:55 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews123 for ios-simulator-wk2
(2.56 MB, application/zip)
2019-04-06 01:02 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews206 for win-future
(12.94 MB, application/zip)
2019-04-06 01:21 PDT
,
EWS Watchlist
no flags
Details
WIP
(13.61 KB, patch)
2019-04-08 23:48 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Fixes the bug
(30.43 KB, patch)
2019-04-09 16:58 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Added ForTesting suffix to plainTextUsingBackwardsTextIterator
(30.45 KB, patch)
2019-04-10 22:25 PDT
,
Ryosuke Niwa
wenson_hsieh
: review+
Details
Formatted Diff
Diff
Show Obsolete
(9)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2019-04-05 23:07:36 PDT
Created
attachment 366875
[details]
Fixes the bug
Ryosuke Niwa
Comment 2
2019-04-05 23:08:32 PDT
Created
attachment 366876
[details]
Fixes the bug
EWS Watchlist
Comment 3
2019-04-06 00:13:19 PDT
Comment on
attachment 366876
[details]
Fixes the bug
Attachment 366876
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/11788918
New failing tests: editing/text-iterator/backwards-text-iterator-basic.html fast/dom/Range/range-expand.html accessibility/mac/text-marker-sentence-nav.html
EWS Watchlist
Comment 4
2019-04-06 00:13:20 PDT
Created
attachment 366878
[details]
Archive of layout-test-results from ews103 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 5
2019-04-06 00:27:40 PDT
Comment on
attachment 366876
[details]
Fixes the bug
Attachment 366876
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/11788930
New failing tests: editing/text-iterator/backwards-text-iterator-basic.html accessibility/mac/text-marker-sentence-nav.html fast/dom/Range/range-expand.html
EWS Watchlist
Comment 6
2019-04-06 00:27:41 PDT
Created
attachment 366879
[details]
Archive of layout-test-results from ews104 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 7
2019-04-06 00:55:14 PDT
Comment on
attachment 366876
[details]
Fixes the bug
Attachment 366876
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/11789034
New failing tests: editing/text-iterator/backwards-text-iterator-basic.html fast/dom/Range/range-expand.html accessibility/mac/text-marker-sentence-nav.html
EWS Watchlist
Comment 8
2019-04-06 00:55:16 PDT
Created
attachment 366880
[details]
Archive of layout-test-results from ews116 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 9
2019-04-06 01:02:45 PDT
Comment on
attachment 366876
[details]
Fixes the bug
Attachment 366876
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/11789045
New failing tests: editing/text-iterator/backwards-text-iterator-basic.html
EWS Watchlist
Comment 10
2019-04-06 01:02:47 PDT
Created
attachment 366881
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 11
2019-04-06 01:21:10 PDT
Comment on
attachment 366876
[details]
Fixes the bug
Attachment 366876
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/11789177
New failing tests: fast/dom/Range/range-expand.html
EWS Watchlist
Comment 12
2019-04-06 01:21:22 PDT
Created
attachment 366882
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Ryosuke Niwa
Comment 13
2019-04-08 23:48:03 PDT
Created
attachment 367030
[details]
WIP The previous patch revealed a bug in startOfSentence. When I fix that, AXObjectCache::previousBoundary in turn reveals another bug about the way we're failing to take care of suffixLength affecting the text index within a text node. So I'd have to fix 3-4 unrelated bugs that used to cancel one another before this patch at once :(
Ryosuke Niwa
Comment 14
2019-04-09 16:58:42 PDT
Created
attachment 367084
[details]
Fixes the bug
Alexey Proskuryakov
Comment 15
2019-04-09 17:35:15 PDT
Comment on
attachment 367084
[details]
Fixes the bug View in context:
https://bugs.webkit.org/attachment.cgi?id=367084&action=review
> Source/WebCore/editing/TextIterator.h:53 > +// For testing. > +WEBCORE_EXPORT String plainTextUsingBackwardsTextIterator(const Range&);
I didn't look at the rest of the patch, but this caught my eye. Why not add "ForTesting" to the function name?
Ryosuke Niwa
Comment 16
2019-04-09 19:10:48 PDT
(In reply to Alexey Proskuryakov from
comment #15
)
> Comment on
attachment 367084
[details]
> Fixes the bug > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=367084&action=review
> > > Source/WebCore/editing/TextIterator.h:53 > > +// For testing. > > +WEBCORE_EXPORT String plainTextUsingBackwardsTextIterator(const Range&); > > I didn't look at the rest of the patch, but this caught my eye. Why not add > "ForTesting" to the function name?
Sure, I can add that suffix.
Ryosuke Niwa
Comment 17
2019-04-10 22:25:07 PDT
Created
attachment 367203
[details]
Added ForTesting suffix to plainTextUsingBackwardsTextIterator
Wenson Hsieh
Comment 18
2019-04-11 12:42:28 PDT
Comment on
attachment 367203
[details]
Added ForTesting suffix to plainTextUsingBackwardsTextIterator View in context:
https://bugs.webkit.org/attachment.cgi?id=367203&action=review
> Source/WebCore/ChangeLog:17 > + make SimplifiedBackwardsTextIterator directly testable in layout tests.
Nit - s/make/to make/
Ryosuke Niwa
Comment 19
2019-04-11 15:57:04 PDT
Committed
r244200
: <
https://trac.webkit.org/changeset/244200
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug